src/test/deca/syntax/valid/ble_int_ble_float.deca
// Description :
// 
//      Test syntaxiquement correct de 3<=2.5
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = 3<=2.5;
}

