src/test/deca/syntax/invalid/eq_any_eq_ineq_any.deca
// Description :
//
//      Test syntaxiquement incorrect de : ==!=
//      
// 
// Résultats : 
// 
//      N/A 
//
// Historique :
// 
//    Créé le 09/06/2023 par gl03

{ 
    boolean y = 4<!="bonjour"; 
}